# rules_nfpm

./: BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum
go/: go.mod
go/cmd/nfpmwrapper/: BUILD.bazel
go/internal/cmd/nfpmwrapper/: BUILD.bazel
nfpm/: go_repositories.bzl  nfpm.bzl  nfpm.patch  repositories.bzl  setup.bzl
nfpm/internal/: buildtools.bzl  repositories.bzl  setup.bzl
scripts/: BUILD.bazel
