###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "rules_nfpm",
    repo_name = "com_github_fancom_rules_nfpm",
)
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_go", version = "0.45.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_jvm_external", version = "6.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.2", repo_name = "io_bazel_stardoc", dev_dependency = True)
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
bazel_dep(name = "platforms", version = "0.0.5")

buildtools = use_extension("//nfpm/internal:buildtools.bzl", "buildtools")
use_repo(buildtools, "com_github_bazelbuild_buildtools")
nfpm = use_extension("//nfpm:nfpm.bzl", "nfpm")
use_repo(nfpm, "com_github_goreleaser_nfpm_v2")
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_tools",
    "com_github_golang_protobuf",
    "com_github_pkg_errors",
    "com_github_alecthomas_kong",
    "com_github_google_go_cmp",
    "in_gopkg_yaml_v3",
    "com_github_ulikunitz_xz",
    "com_github_masterminds_semver_v3",
    "com_github_goreleaser_chglog",
    "com_github_aleksi_pointer",
    "com_github_klauspost_compress",
    "com_github_google_rpmpack",
    "cat_dario_mergo",
    "com_github_blakesmith_ar",
    "org_golang_x_exp",
    "com_github_protonmail_go_crypto",
    "com_github_goreleaser_fileglob"
)
bazel_dep(name = "circl", version = "1.3.7")
