load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nfpmwrapper_lib",
    srcs = ["main.go"],
    importpath = "github.com/ericnorris/rules_nfpm/go/cmd/nfpmwrapper",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/cmd/nfpmwrapper",
        "@com_github_alecthomas_kong//:kong",
        "@com_github_pkg_errors//:errors",
        "@com_github_cavaliergopher_cpio//:cpio",
        "@com_github_goreleaser_fileglob//:go_default_library",
        "@com_github_gobwas_glob//:glob"
    ],
)

go_binary(
    name = "nfpmwrapper",
    embed = [":nfpmwrapper_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-contents",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
